--- a/exercises/06.rerenders/01.solution.memo/README.mdx
+++ b/exercises/06.rerenders/01.solution.memo/README.mdx
@@ -1,6 +1,5 @@
 # Component Memoization
 
-Click "force re-render"
-
-- In browser devtools you can't find the ListItem function call
-- In react devtools you don't see it either
+👨‍💼 Great job! You've managed to really improve the performance of our list when
+unrelated updates occur. But what if there are updates to the list itself?
+Hmm...
