--- a/exercises/06.rerenders/02.solution.comparator/README.mdx
+++ b/exercises/06.rerenders/02.solution.comparator/README.mdx
@@ -1,3 +1,4 @@
 # Custom Comparator
 
-Hover over one of the list items and notice only one re-renders
+👨‍💼 Great! The performance is better! Unfortunately, that custom comparator is
+kinda complex. I wonder if we could simplify it a bit...
