--- a/exercises/06.rerenders/03.problem.primitives/README.mdx
+++ b/exercises/06.rerenders/03.problem.primitives/README.mdx
@@ -1,1 +1,43 @@
 # Primitives
+
+👨‍💼 I would love to have the performance improvement without all the complexity
+of the custom comparator function.
+
+The default comparator function is a simple `===` comparison. So if we changed
+the props a bit, we could take advantage of this.
+
+Remember our Avatar example before?
+
+```tsx
+const Avatar = memo(
+	function Avatar({ user }: { user: User }) {
+		return <img src={user.avatarUrl} alt={user.name} />
+	},
+	(prevProps, nextProps) => {
+		const avatarChanged = prevProps.user.avatarUrl !== nextProps.user.avatarUrl
+		const nameChanged = prevProps.user.name !== nextProps.user.name
+		return avatarChanged || nameChanged
+	},
+)
+```
+
+We could change the props for this component to be primitives instead of objects.
+
+```tsx
+const Avatar = memo(function Avatar({
+	avatarUrl,
+	name,
+}: {
+	avatarUrl: string
+	name: string
+}) {
+	return <img src={avatarUrl} alt={name} />
+})
+```
+
+And now we can use the default comparator function without specifying our own
+because a simple check with `===` will be enough.
+
+Let's do this for our `ListItem`.
+
+And make sure to check the before/after of your work!
