--- a/exercises/06.rerenders/FINISHED.mdx
+++ b/exercises/06.rerenders/FINISHED.mdx
@@ -1,1 +1,4 @@
 # Optimize Rendering
+
+👨‍💼 When you find yourself rendering a ton of the same component, optimizing that
+one component can have an outsized impact on performance. Good job!
