--- a/exercises/07.windowing/FINISHED.mdx
+++ b/exercises/07.windowing/FINISHED.mdx
@@ -1,1 +1,10 @@
 # Windowing
+
+👨‍💼 You did it! Great work on improving the performance of this component!
+
+🦉 One thing you should know about virtualization is that ⌘+F (or on
+Linux/Windows Ctrl+F) will not work out of the box. This is because the browser
+doesn't know about the virtualized items. You can implement this yourself, but
+it's a bit more complex (you've probably seen other apps do this). Hopefully
+one day the platform will have a better primitive for this type of thing. The
+web is always evolving!
