--- a/exercises/FINISHED.mdx
+++ b/exercises/FINISHED.mdx
@@ -5,6 +5,11 @@ There's still so much more we can do to improve performance of our applications,
 but you've now been given the tools to analyze and improve your own
 applications.
 
+<callout-danger class="important">
+	Remember: measure first, then optimize, then measure again. Don't make your
+	code more complex for no reason.
+</callout-danger>
+
 🦉 One last thing I want to note is that everything we've done in this workshop
 involved client-rendered applications. There's a ceiling of performance
 improvements you hit with client-rendered applications. To break through that
