--- a/exercises/01.composition/README.mdx
+++ b/exercises/01.composition/README.mdx
@@ -24,7 +24,7 @@ function Message({ greeting }) {
 }
 
 function Counter() {
-	const [count, setCount] = React.useState(0)
+	const [count, setCount] = useState(0)
 	const increment = () => setCount(c => c + 1)
 	return (
 		<div>
@@ -51,7 +51,7 @@ function Message({ greeting }) {
 const message = <Message greeting="Hello!" />
 
 function Counter() {
-	const [count, setCount] = React.useState(0)
+	const [count, setCount] = useState(0)
 	const increment = () => setCount(c => c + 1)
 	return (
 		<div>
