--- a/exercises/05.calculations/README.mdx
+++ b/exercises/05.calculations/README.mdx
@@ -26,7 +26,7 @@ This is why we have the `useMemo` hook from React:
 
 ```tsx
 function Distance({ x, y }) {
-	const distance = React.useMemo(() => calculateDistance(x, y), [x, y])
+	const distance = useMemo(() => calculateDistance(x, y), [x, y])
 	return (
 		<div>
 			The distance between {x} and {y} is {distance}.
