fix some instructions

--- a/exercises/04.code-splitting/README.mdx
+++ b/exercises/04.code-splitting/README.mdx
@@ -28,8 +28,8 @@ import('/some-module.js').then(
 
 To take this further, React has built-in support for loading modules as React
 components. The module must have a React component as the default export, and
-you have to use the `<React.Suspense />` component to render a fallback value
-while the user waits for the module to be loaded.
+you have to use the `<Suspense />` component to render a fallback value while
+the user waits for the module to be loaded.
 
 ```tsx
 // smiley-face.tsx
