--- a/exercises/06.rerenders/README.mdx
+++ b/exercises/06.rerenders/README.mdx
@@ -37,7 +37,7 @@ Please read more about this in my blog post:
 [Fix the slow render before you fix the rerender](https://kentcdodds.com/blog/fix-the-slow-render-before-you-fix-the-re-render).
 
 Let's look at an example to learn how this works. You can pull this example up
-at <a target="_blank" href="/app/examples/unnecessary-rerenders">/app/examples/unnecessary-rerenders</a>
+at <a target="_blank" href="/app/example.unnecessary-rerenders/">/app/example.unnecessary-rerenders</a>
 (and feel free to play with it in `examples/unnecessary-rerenders`). Pull this
 up and profile it with the React DevTools.
 
