fix some things

--- a/exercises/01.elements/05.problem.memo/README.mdx
+++ b/exercises/01.elements/05.problem.memo/README.mdx
@@ -5,7 +5,9 @@ called `memo` which allows you to memoize an entire component based on its
 props:
 
 ```tsx
-const MyComponent = React.memo(function MyComponent(props) {
+import { memo } from 'react'
+
+const MyComponent = memo(function MyComponent(props) {
 	/* only rerenders if props change */
 })
 ```
