--- a/exercises/06.rerenders/README.mdx
+++ b/exercises/06.rerenders/README.mdx
@@ -2,11 +2,7 @@
 
 Here's the lifecycle of a React app:
 
-```
-→  render → reconciliation → commit
-         ↖                   ↙
-              state change
-```
+![→ render → reconciliation → commit → state change → rerender](/img/react-render-cycle.png)
 
 Let's define a few terms:
 
