--- a/exercises/06.rerenders/README.mdx
+++ b/exercises/06.rerenders/README.mdx
@@ -59,7 +59,8 @@ function NameInput({
 }) {
 	return (
 		<label>
-			Name: <input value={name} onChange={e => onNameChange(e.target.value)} />
+			Name:{' '}
+			<input value={name} onChange={e => onNameChange(e.currentTarget.value)} />
 		</label>
 	)
 }
@@ -125,7 +126,8 @@ const NameInput = memo(function NameInput({
 }) {
 	return (
 		<label>
-			Name: <input value={name} onChange={e => onNameChange(e.target.value)} />
+			Name:{' '}
+			<input value={name} onChange={e => onNameChange(e.currentTarget.value)} />
 		</label>
 	)
 })
